Ajout de la partie activités en Html

--- a/index.html
+++ b/index.html
@@ -60,109 +60,111 @@
 
         </section>
 
-   <!-- Hébergements à Marseille-->
+   <!-- Hébergements à Marseille -->
 
-   <section id="hosting">
+        <section id="hosting">
 
-    <section id="main_hosting">
+        <section id="main_hosting">
 
-    <div class="hosting_marseille">
-        <h2>Hébergements à Marseille</h2>
+            <div class="hosting_marseille">
+                 <h2>Hébergements à Marseille</h2>
 
-    <div class="first_hotel">
-        <article class="hotel">
-            <a href="#">
-                <img src="./images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="Auberge la Cannebière" />
-                <h3>Auberge à la Cannebière</h3>
-                <p>Nuit à partir de <strong>25€</strong></p>
-                <div class="stars">
-                    <i class="full fas fa-star"></i>
-                    <i class="full fas fa-star"></i>
-                    <i class="full fas fa-star"></i>
-                    <i class="full fas fa-star"></i>
-                    <i class="empty fas fa-star"></i>
-                </div>
-            </a>
-        </article>
+            <div class="first_hotel">
+                <article class="hotel">
+                    <a href="#">
+                        <img src="./images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="Auberge la Cannebière" />
+                        <h3>Auberge à la Cannebière</h3>
+                        <p>Nuit à partir de <strong>25€</strong></p>
+                        <div class="stars">
+                            <i class="full fas fa-star"></i>
+                            <i class="full fas fa-star"></i>
+                            <i class="full fas fa-star"></i>
+                            <i class="full fas fa-star"></i>
+                            <i class="empty fas fa-star"></i>
+                        </div>
+                    </a>
+                </article>
 
-        <article class="hotel">
-            <a href="#">
-                <img src="./images/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg" alt="Hôtel du port" />
-                <h3>Hôtel du port</h3>
-                <p>Nuit à partir de <strong>52€</strong></p>
-                <div class="stars">
-                    <i class="full fas fa-star"></i>
-                    <i class="full fas fa-star"></i>
-                    <i class="full fas fa-star"></i>
-                    <i class="full fas fa-star"></i>
-                    <i class="full fas fa-star"></i>
-                </div>
-            </a>
-        </article>
+                <article class="hotel">
+                    <a href="#">
+                        <img src="./images/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg" alt="Hôtel du port" />
+                        <h3>Hôtel du port</h3>
+                        <p>Nuit à partir de <strong>52€</strong></p>
+                        <div class="stars">
+                            <i class="full fas fa-star"></i>
+                            <i class="full fas fa-star"></i>
+                            <i class="full fas fa-star"></i>
+                            <i class="full fas fa-star"></i>
+                            <i class="full fas fa-star"></i>
+                        </div>
+                    </a>
+                </article>
 
-        <article class="hotel">
-            <a href="#">
-                <img src="./images/hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg" alt="Hôtel Les mouettes" />
-                <h3>Hôtel Les mouettes</h3>
-                <p>Nuit à partir de <strong>76€</strong></p>
-                <div class="stars">
-                    <i class="full fas fa-star"></i>
-                    <i class="full fas fa-star"></i>
-                    <i class="full fas fa-star"></i>
-                    <i class="full fas fa-star"></i>
-                    <i class="empty fas fa-star"></i>
-                </div>
-            </a>
-        </article>
-    </div>
+                <article class="hotel">
+                    <a href="#">
+                        <img src="./images/hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg" alt="Hôtel Les mouettes" />
+                        <h3>Hôtel Les mouettes</h3>
+                        <p>Nuit à partir de <strong>76€</strong></p>
+                        <div class="stars">
+                            <i class="full fas fa-star"></i>
+                            <i class="full fas fa-star"></i>
+                            <i class="full fas fa-star"></i>
+                            <i class="full fas fa-star"></i>
+                            <i class="empty fas fa-star"></i>
+                        </div>
+                    </a>
+                </article>
+            </div>
 
-    <div class="second_hotel">
+            <div class="second_hotel">
 
-        <article class="hotel">
-            <a href="#">
-                <img src="./images/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg" alt="Hôtel de la mer" />
-                <h3>Hôtel de la mer</h3>
-                <p>Nuit à partir de <strong>46€</strong></p>
-                <div class="stars">
-                    <i class="full fas fa-star"></i>
-                    <i class="full fas fa-star"></i>
-                    <i class="full fas fa-star"></i>
-                    <i class="empty fas fa-star"></i>
-                    <i class="empty fas fa-star"></i>
-                </div>
-            </a>
-        </article>
+                <article class="hotel">
+                    <a href="#">
+                        <img src="./images/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg" alt="Hôtel de la mer" />
+                        <h3>Hôtel de la mer</h3>
+                        <p>Nuit à partir de <strong>46€</strong></p>
+                        <div class="stars">
+                            <i class="full fas fa-star"></i>
+                            <i class="full fas fa-star"></i>
+                            <i class="full fas fa-star"></i>
+                            <i class="empty fas fa-star"></i>
+                            <i class="empty fas fa-star"></i>
+                        </div>
+                    </a>
+                </article>
 
-        <article class="hotel">
-            <a href="#">
-                <img src="./images/hebergements/4_small/nicate-lee-kT-ZyaiwBe0-unsplash.jpg" alt="Auberge Le Panier" />
-                <h3>Auberge Le Panier</h3>
-                <p>Nuit à partir de <strong>23€</strong></p>
-                <div class="stars">
-                    <i class="full fas fa-star"></i>
-                    <i class="full fas fa-star"></i>
-                    <i class="full fas fa-star"></i>
-                    <i class="full fas fa-star"></i>
-                    <i class="empty fas fa-star"></i>
-                </div>
-            </a>
-        </article>
+                <article class="hotel">
+                    <a href="#">
+                        <img src="./images/hebergements/4_small/nicate-lee-kT-ZyaiwBe0-unsplash.jpg" alt="Auberge Le Panier" />
+                        <h3>Auberge Le Panier</h3>
+                        <p>Nuit à partir de <strong>23€</strong></p>
+                        <div class="stars">
+                            <i class="full fas fa-star"></i>
+                            <i class="full fas fa-star"></i>
+                            <i class="full fas fa-star"></i>
+                            <i class="full fas fa-star"></i>
+                            <i class="empty fas fa-star"></i>
+                        </div>
+                    </a>
+                </article>
 
-        <article class="hotel">
-            <a href="#">
-                <img src="./images/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg" alt="Hôtel chez Amina" />
-                <h3>Hôtel chez Amina</h3>
-                <p>Nuit à partir de <strong>96€</strong></p>
-                <div class="stars">
-                    <i class="full fas fa-star"></i>
-                    <i class="full fas fa-star"></i>
-                    <i class="full fas fa-star"></i>
-                    <i class="full fas fa-star"></i>
-                    <i class="full fas fa-star"></i>
-                </div>
-            </a>
-        </div>
-        </article>
+                <article class="hotel">
+                    <a href="#">
+                        <img src="./images/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg" alt="Hôtel chez Amina" />
+                        <h3>Hôtel chez Amina</h3>
+                        <p>Nuit à partir de <strong>96€</strong></p>
+                        <div class="stars">
+                            <i class="full fas fa-star"></i>
+                            <i class="full fas fa-star"></i>
+                            <i class="full fas fa-star"></i>
+                            <i class="full fas fa-star"></i>
+                            <i class="full fas fa-star"></i>
+                        </div>
+                    </a>
+            
+            
+                </article>
+            </div>
 
         <div class="view_more">
             <p><a href="#">Afficher plus</a></p>
@@ -171,7 +173,7 @@
     </div>
     </section>
 
-<!-- Les plus populaires--> 
+<!-- Les plus populaires --> 
 
     <aside class="most_popular">
 
@@ -246,9 +248,66 @@
     </aside>
 </section>
 
-<!--Activités à Marseille-->
+<!-- Activités à Marseille -->
 
-   </main>
+<section id="activities">
+    <h2>Activités à Marseille</h2>
+    <div class="activities">
+        <article class="vieux_port">
+            <a href="#">
+                <img src="./images/activites/3_medium/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt="Vieux Port" />
+                <h3>Vieux Port</h3>
+            </a>
+        </article>
+
+        <div class="small_images">
+            <article class="fort">
+                <a href="#">
+                    <img src="./images/activites/4_small/paul-hermann-QFTrLdQIRhI-unsplash.jpg" alt="Fort de Pomègues"/>
+                    <h3>Fort de Pomègues</h3>
+                </a>
+            </article>
+
+            <article class="iles">
+                <a href="#">
+                    <img src="./images/activites/4_small/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg" alt="Iles du Frioul"/>
+                    <h3>Îles du Frioul</h3>
+                </a>
+            </article>
+        </div>
+
+        <article class="parc_national">
+            <a href="#">
+                <img src="./images/activites/3_medium/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg" alt="Parc National des Calanques"/>
+                <h3>Parc National des Calanques</h3>
+            </a>
+        </article>
+
+        <div class="small_images">
+            <article class="basilique">
+                <a href="#">
+                    <img src="./images/activites/4_small/florian-wehde-xW9e8gdotxI-unsplash.jpg" alt="Notre-Dame-de-la-Garde" />
+                    <h3>Notre-Dame-de-la-Garde</h3>
+                </a>
+            </article>
+
+            <article class="parc_longchamp">
+                <a href="#">
+                    <img src="./images/activites/4_small/lena-paulin-wH2-EJoDcV0-unsplash.jpg" alt="Parc Longchamp" />
+                    <h3>Parc Longchamp</h3>
+                </a>
+            </article>
+        </div>
+
+    </div>
+ </section>
+</main>
+
+
+<!-- Footer -->
+
+
+
 </body>
 
 </html>
