--- a/index.html
+++ b/index.html
@@ -306,6 +306,33 @@
 
 <!-- Footer -->
 
+<footer>
+
+    <div class="footer_list">
+        <h3>A propos</h3>
+        <ul>
+            <li><a href="#">Fonctionnement du site</a></li>
+            <li><a href="#">Conditions générales de vente</a></li>
+            <li><a href="#">Données et confidentialité</a></li>
+        </ul>
+    </div>
+
+    <div class="footer_list">
+        <h3>Nos hébergements</h3>
+        <ul>
+            <li><a href="#">Charte de qualité</a></li>
+            <li><a href="#">Soumettre votre hôtel</a></li>
+        </ul>
+    </div>
+
+    <div class="footer_list">
+        <h3>Assistance</h3>
+        <ul>
+            <li><a href="#">Centre d'iade</a></li>
+            <li><a href="#">Nous contacter</a></li>
+        </ul>
+    </div>
+</footer>
 
 
 </body>
