--- a/index.html
+++ b/index.html
@@ -33,7 +33,8 @@
           <form action="#" method="POST" class="form">
             <i class="fas fa-map-marker-alt"></i>
             <input type="search" name="city" class="city" value="Marseille, France">
-            <button type="submit" disabled class="btn_search">Rechercher</button>                     
+            <button type="submit" disabled class="btn_search">Rechercher</button>  
+            <button type="submit" disabled class="btn_icon"><i class="fas fa-search"></i></button>                 
           </form>
        
 
