--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
           <nav>
             <img src="./images/logo/Reservia.svg" alt="logo">
             <ul>
-              <li class="hosting"><a href="#hosting">Hébergements</a></li>
-              <li class="activites"><a href="#activities">Activités</a></li>
+              <li class="menu_hosting"><a href="#hosting">Hébergements</a></li>
+              <li class="menu_activites"><a href="#activities">Activités</a></li>
               <li class="sign_up"><a href="#">S'inscrire</a></li>
             </ul>
           </nav>
