--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <ul>
               <li class="menu_hosting"><a href="#hosting">Hébergements</a></li>
               <li class="menu_activites"><a href="#activities">Activités</a></li>
-              <li class="sign_up"><a href="#">S'inscrire</a></li>
+<!--               <li class="sign_up"><a href="#">S'inscrire</a></li> -->
             </ul>
           </nav>
      
