--- a/index.html
+++ b/index.html
@@ -10,18 +10,17 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Raleway&display=swap" rel="stylesheet">
         <script src="https://kit.fontawesome.com/1a22d99172.js" crossorigin="anonymous"></script> 
-        <title>Reservia</title>
+        <title>Booki</title>
     </head>
 
     <body>
 
      <header>
           <nav>
-            <img src="./images/logo/Reservia.svg" alt="logo">
+            <img src="./images/logo/Booki.png" alt="logo">
             <ul>
               <li class="menu_hosting"><a href="#hosting">Hébergements</a></li>
               <li class="menu_activites"><a href="#activities">Activités</a></li>
-<!--               <li class="sign_up"><a href="#">S'inscrire</a></li> -->
             </ul>
           </nav>
      
@@ -166,7 +165,7 @@
 
                 <div class="title_most_popular">
                   <h2>Les plus populaires</h2>
-                  <i class="fas fa-chart-line fa-2x"></i>
+                  <i class="black fas fa-star"></i>
                 </div>
 
                   <article class="hotel_2">
